@@ -1,3 +1,8 @@
+2003-06-03  Steve Fosdick  <gnomedb@pelvoux.demon.co.uk>
+
+	* Oracle Provider - fixed a statement handle leak which caused
+	Oracle to run out of cursors.
+
 2003-05-28  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	Released 0.12.0
